proofing help.html

--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -57,15 +57,15 @@
         <br><br>
             <h2>About The Product</h2>
             <p>NYC Accessible Streets is an application designed to provide NYC street accessibility data to individuals with mobility issues
-               or visual impairments. Millions of disabled individuals or elderly gets stranded on the streets due to being dropped off at an 
-               inaccessible location by their ride-share services. Our product tackles that problem by allowing users to search for any address in new york city 
+               and/or visual impairments. Millions of disabled individuals and elderly people find themselves stranded after being dropped off at an 
+               inaccessible location by their ride-share services. Our product tackles that problem by allowing unregistered users to search for any address in New York City 
                and view nearby accessible ramps and signal poles, as well as inaccessible raised sidewalks. They can also view reports of temporarily inaccessible 
-               infrastructures near their searched locations. This will ensure that these users get to their destination safely.
+               infrastructures near the address they searched for. This gives users the information they need to ensure that they get to their destination safely.
             </p>
 
-            <p>Additionally, registered user can interact with the community by submitting reports, adding updates to reports, and verify the status
-               of reports by reacting with a thumbs up button. Logged-in users also have the ability to add their frequently visited addresses
-               to a list of favorites and share their favorite locations with friends and family.
+            <p>Additionally, registered users can interact with the NYC Accessible Streets community by submitting reports about inaccessible locations, adding comments to 
+               existing reports, and verifying the status of reports by reacting with a thumbs up button. Logged-in users can also add their frequently visited addresses
+               to a list of favorites that they can share with friends and family.
             </p>
 
             <!-- <h2>Tutorial Video</h2>
@@ -76,11 +76,11 @@
             <br>
 
             <h2>FAQ</h2>
-            <h4>I see inaccessible ramp/signal pole on the street. How can I report it?</h4>
-                <p>On the left-hand side of the main page click <b>Report Issue</b> on the card whose location you want to report.
-                Then fill out the issue and description options and click <b>Submit Report</b> to notify us. After the report is submitted,
-                you should see the pin icon change, and the card should now have be outlined in red and show the option for 
-                all users to to <b>View Issue</b>. You can add updates to the issue, thumbs up to verify the issue, or mark it as resovled
+            <h4>I see an inaccessible ramp/ nonfunctional signal pole on the street. How can I report it?</h4>
+                <p>On the left-hand side of the main page click <b>Report Issue</b> on the card for the location you want to report.
+                Then, fill out the issue and description options and click <b>Submit Report</b> to notify us. After the report is submitted,
+                you should see the pin icon change, and the card should now be outlined in red and show the option for 
+                all users to to <b>View Issue</b>. You can add updates to the issue, thumbs up to verify the issue, or mark it as resolved
                 when the location becomes accessible again.</p>
 
             <h4>Can I share addresses with my family?</h4>
@@ -89,15 +89,15 @@
                 share that entire address.</p>
 
             <h4>How can I access low vision mode?</h4>
-                <p>If our map is not accessible for you, you can alternatively view information of all the infrastructures using our low vision view.
-                On the map page, click on the <b>Low Vision View</b> button on the navigation bar. You will now see an alternative tabular view of all the pin
+                <p>If our map is not accessible for you, you can access the same information about accessible/inaccessible infrastructure in a tabular format using our low vision view.
+                On the map page, click on the <b>Low Vision View</b> button on the navigation bar. This will redirect you to an alternative tabular representation of all the pin
                 information. To go back to map view, simply click on the <b>Map View</b> button on the navigation bar. </p>
 
             <h4>How do I save frequently visited locations?</h4>
-                <p> On the right hand side of the map page, you can click the 'add address to favorite' button to add the location 
-                to your favorites. Once the it has been successfully added, you should see 'address favorited!' on the screen. You can then 
-                view your list of favorites by clicking on the <b>My Favorites</b> button in the navigation bar. Only registered 
-                users have this ability to create their own list, so be sure to create an account and log in first.</p>
+                <p> Only registered users have the ability to create a favorites list, so be sure to create an account and log in before following these steps.
+                On the right hand side of the map page, you can click the 'add address to favorite' button to add the location 
+                to your favorites. Once it has been successfully added, you should see 'address favorited!' on the screen. You can then 
+                view your list of favorites by clicking on the <b>My Favorites</b> button in the navigation bar. </p>
 
             <h4>Is information on this website moderated?</h4>
                 <p>We have admin and staff members moderating all reports and users during working hours, Monday-Friday. If we see any 
