profile page and url routes

--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -14,6 +14,15 @@
   <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'accounts/style.css' %}">
 </head>
+<style>
+    .pad{
+        padding-right: 25%;
+        padding-left: 25%;
+    }
+    .cent{
+        text-align: center;
+    }
+</style>
 
 <body class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
@@ -27,9 +36,71 @@
     </ul>
   </div>
 </nav>
-<h1>Hi {{user.first_name}}!</h1>
+<h1>Hello {{user.first_name}}</h1>
+<h3>Current User Information</h3>
+<h5>First Name: {{user.first_name}}</h5>
+<h5>Last Name: {{user.last_name}}</h5>
+<h5>Username: {{user.username}}</h5>
+<h5>Password: {{user.password}}</h5>
 <h5>Change First Name</h5>
+<form action="" method="post">
+   {% csrf_token %}
+   {{ fnform }}
+   <input type="submit" value="Submit">
+</form>
 <h5>Change Last Name</h5>
+<form action="" method="post">
+   {% csrf_token %}
+   {{ lnform }}
+   <input type="submit" value="Submit">
 <h5>Change Password</h5>
+</form><form action="" method="post">
+   {% csrf_token %}
+   {{ pwform }}
+   <input type="submit" value="Submit">
+</form>
+{% load crispy_forms_tags %}
+    <div class="padding">
+        <div class="pad"><h1><div class="cent">Hello {{user.first_name}}</div></h1>
+            <br><br>
+        <h2>Change First Name</h2>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="col-md-12">
+                <div class="form-group">
+                    {{fnform.new_first_name|as_crispy_field}}
+                </div>
+            </div>
+            <div class="col-md-12" style="margin-bottom:30px">
+                <button style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Submit</button>
+            </div>
+        </form>
+            <h2>Change Last Name</h2>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="col-md-12">
+                <div class="form-group">
+                    {{lnform.new_last_name|as_crispy_field}}
+                </div>
+            </div>
+            <div class="col-md-12" style="margin-bottom:30px">
+                <button style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Submit</button>
+            </div>
+        </form>
+            <h2>Change Password</h2>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="col-md-12">
+                <div class="form-group">
+                    {{pwform.new_password|as_crispy_field}}
+                </div>
+            </div>
+            <div class="col-md-12" style="margin-bottom:30px">
+                <button style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+    </div>
+
 </body>
 </html>
