Added share and copy button to low vision page

--- a/landing_map/templates/landing_map/lowVisionView.html
+++ b/landing_map/templates/landing_map/lowVisionView.html
@@ -74,6 +74,10 @@
                       add address to favorites</button>
                   {% endif %}
               </form>
+              <div class="shareButton" onclick="shareLink()" onmouseout="mouseOutShareTooltip()">
+                  <span class="sharetooltiptext" id="shareTooltip">Share Favorite</span>
+                  <span class="glyphicon glyphicon-share"></span>
+                </div>
             </div>
           </div>
 
