--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -79,6 +79,13 @@
     {% load crispy_forms_tags %}
     <div class="padding">
         <h2>Contact Us</h2>
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <h4{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</h4>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <form method="POST" action="">
             {% csrf_token %}
             <div class="col-md-12">
