Issue158 sarthak reports mapbox (#192)
* Added maps to homepage reports and fixed searchbox alignment

* Added maps to reports on mappage

* Added maps to reports on mappage

--- a/landing_map/templates/landing_map/report_detail.html
+++ b/landing_map/templates/landing_map/report_detail.html
@@ -1,4 +1,5 @@
-<div id="pin_{{card.card_id}}_details" class="modal fade" role="dialog">
+{% load static %}
+<div id="pin_{{report.infraID}}_details" class="modal fade" role="dialog">
     <div class="modal-dialog modal-dialog-centered">
         <!-- Modal content-->
         <div class="modal-content">
@@ -12,7 +13,7 @@
             <!-- modal body content -->
             <div class="modal-body row">
                 <div class="col-md-6">
-                    <img src="/static/img/map_dummy.png" alt="dummy image for map" width="280" height="280">
+                    <div id="map_{{report.infraID}}" style="width:280px; height:280px"></div>
                 </div>
                 
                 <div class="col-md-6 ml-auto view-report" style='height:300px; overflow-y: scroll'>
