--- a/landing_map/templates/landing_map/landingpage.html
+++ b/landing_map/templates/landing_map/landingpage.html
@@ -17,7 +17,9 @@
 <!-- Load the `mapbox-gl-geocoder` plugin. -->
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-
+<script type="text/javascript">
+    mapboxgl.accessToken = '{{mapboxAccessToken}}';
+</script>
 <!-- navigation bar -->
 {% include 'common/navbar.html' %}
 
@@ -31,22 +33,32 @@
     </div>
 
     <div class="reports container-fluid">
-        <h3 style="padding-top: 10px; padding-bottom: 10px;" >&nbsp;&nbsp;recent reports</h3>
+        <h3 style="padding-top: 30px; padding-bottom: 20px;" >&nbsp;&nbsp;Recent Reports</h3>
         
         <div class="row" style="margin: 3px;">
             <!-- one card -->
             {% for report in recent_report_list %}
             <div class="col-md-4">
                 <div class="well well-lg">
-                    <img src="/static/img/dummy_report.png" alt="dummy report image of map" 
-                        style="padding-bottom:15px; width:100%; height:auto;">
+                    <div id="map_{{report.createdAt}}" style="height: 250px;"></div>
+                        <script>
+                            new mapboxgl.Marker()
+                            .setLngLat(['{{report.locationX}}','{{report.locationY}}'])
+                            .addTo(new mapboxgl.Map({
+                                container: 'map_{{report.createdAt}}',
+                                style: 'mapbox://styles/mapbox/streets-v11',
+                                center: ['{{report.locationX}}','{{report.locationY}}'],
+                                zoom: 15,
+                                marker: true
+                            }));
+                        </script>
 
                     <h4>{{report.address}}</h4>
                     
                     <div class="row">
                         <div class='col-md-4'>
-                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#pin_{{card.card_id}}_details"
-                            style=" background-color:#884515; color:white; padding-left:15px; padding-right:15px;">
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#pin_{{report.infraID}}_details"
+                            style=" background-color:#884515; color:white; padding-left:15px; padding-right:15px;"  onclick="loadLandingPageReportMap({{report.locationX}}, {{report.locationY}}, {{report.infraID}})">
                                 Inaccessible {{report.infraType}}
                             </button>
 
@@ -68,11 +80,8 @@
 
     {% include 'common/copyright.html' %}
 
-<script type="text/javascript">
-    mapboxgl.accessToken = '{{mapboxAccessToken}}';
-</script>
-
 <script src="{% static 'landing_map/geocoderHomepage.js' %} "></script>
+<script src="{% static 'landing_map/reportsMap.js' %} "></script>
 
 </body>
 </html>
