Issue93&165 claudia active emailpage help page (#195)
* add help page content

* change button hover color

* check email page

* render check email page

* proofing help.html

* Update tests.py

Co-authored-by: Simone B <76664640+SNefertitiB@users.noreply.github.com>

--- a/accounts/templates/help.html
+++ b/accounts/templates/help.html
@@ -35,6 +35,12 @@
 
         h4{
             margin-top: 20px;
+            color:#18435A;
+        }
+
+        .padding{
+            padding-left: 5%;
+            padding-right: 5%;
         }
 
     </style>
@@ -49,29 +55,58 @@
 
     <div class="padding">
         <br><br>
-            <h2>About Us</h2>
-            <p>We are a small group of NYU graduate students looking to provide NYC street accessibility data to individuals with mobility issues
-               or visual impairments. 
+            <h2>About The Product</h2>
+            <p>NYC Accessible Streets is an application designed to provide NYC street accessibility data to individuals with mobility issues
+               and/or visual impairments. Millions of disabled individuals and elderly people find themselves stranded after being dropped off at an 
+               inaccessible location by their ride-share services. Our product tackles that problem by allowing unregistered users to search for any address in New York City 
+               and view nearby accessible ramps and signal poles, as well as inaccessible raised sidewalks. They can also view reports of temporarily inaccessible 
+               infrastructures near the address they searched for. This gives users the information they need to ensure that they get to their destination safely.
             </p>
+
+            <p>Additionally, registered users can interact with the NYC Accessible Streets community by submitting reports about inaccessible locations, adding comments to 
+               existing reports, and verifying the status of reports by reacting with a thumbs up button. Logged-in users can also add their frequently visited addresses
+               to a list of favorites that they can share with friends and family.
+            </p>
+
+            <!-- <h2>Tutorial Video</h2>
+            <video width="100%" height="auto" controls>
+                <source src="" type="video/mp4">
+            </video> -->
 
             <br>
 
             <h2>FAQ</h2>
-            <h4>How do I report an inaccessible ramp/signal pole?</h4>
-                <p>On the left-hand side of the main page click "report issue" on the card whose location you want to report.
-                Then fill out the issue and description options and click "submit report" to notify us.</p>
+            <h4>I see an inaccessible ramp/ nonfunctional signal pole on the street. How can I report it?</h4>
+                <p>On the left-hand side of the main page click <b>Report Issue</b> on the card for the location you want to report.
+                Then, fill out the issue and description options and click <b>Submit Report</b> to notify us. After the report is submitted,
+                you should see the pin icon change, and the card should now be outlined in red and show the option for 
+                all users to to <b>View Issue</b>. You can add updates to the issue, thumbs up to verify the issue, or mark it as resolved
+                when the location becomes accessible again.</p>
+
+            <h4>Can I share addresses with my family?</h4>
+                <p>Of course! You can easily copy addresses of accessible infrastructures by clicking on any card on the left side of the 
+                map page. If you want to share all pins near an address, simply click on the share icon on the right side right above the map to
+                share that entire address.</p>
+
+            <h4>How can I access low vision mode?</h4>
+                <p>If our map is not accessible for you, you can access the same information about accessible/inaccessible infrastructure in a tabular format using our low vision view.
+                On the map page, click on the <b>Low Vision View</b> button on the navigation bar. This will redirect you to an alternative tabular representation of all the pin
+                information. To go back to map view, simply click on the <b>Map View</b> button on the navigation bar. </p>
 
             <h4>How do I save frequently visited locations?</h4>
-                <p>For each location card on the left hand side of the main page you can click the star in the top right corner
-                of the card to add the location to your favorites. Once the star turns yellow it means it has been added to your
-                favorites.</p>
+                <p> Only registered users have the ability to create a favorites list, so be sure to create an account and log in before following these steps.
+                On the right hand side of the map page, you can click the 'add address to favorite' button to add the location 
+                to your favorites. Once it has been successfully added, you should see 'address favorited!' on the screen. You can then 
+                view your list of favorites by clicking on the <b>My Favorites</b> button in the navigation bar. </p>
 
             <h4>Is information on this website moderated?</h4>
-                <p>[answer to question]</p>
+                <p>We have admin and staff members moderating all reports and users during working hours, Monday-Friday. If we see any 
+                inappropriate comments or spam, they will be immediately removed. Any false information will also be removed from the website 
+                as soon as possible. Users that consistently submit inappropriate content will be warned and removed.</p>
 
             <h4>This website is not compatible with my screen reader, what can I do?</h4>
                 <p>If you notice any part of the website that is not screen-reader compatible, please contact us using the form below
-                    by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
+                by specifying the model of your assitive technology and the issue you're experiencing. We will do our best to help.</p>
                     
         <br><br>
     </div>
