--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -26,6 +26,16 @@
         color: red;
     }
 </style>
+<script>
+    function censorpword() {
+      var x = document.getElementById("myInput");
+      if (x.type === "password") {
+        x.type = "text";
+      } else {
+        x.type = "password";
+      }
+    }
+</script>
 
 <body class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
@@ -44,7 +54,8 @@
         <div class="pad"><div class="cent">
             <h1>General Account Settings</h1>
             <br><br><br>
-            <h5>Username:   <span class="info">{{user.username}}</span></h5>
+            <h5>Username: <span class="info">{{user.username}}</span></h5>
+            <h5>Email: <span class="info">{{user.email}}</span></h5>
         </div>
             <br><br>
         <h2>Change User Information</h2>
