--- a/landing_map/templates/landing_map/lowVisionView.html
+++ b/landing_map/templates/landing_map/lowVisionView.html
@@ -20,7 +20,10 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
 <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">
+<link rel="stylesheet" href="{% static 'landing_map/loader.css' %}">
 
+<!-- Loader -->
+{% include 'common/loader.html' %}
 <!-- navigation bar -->
 {% include 'common/navbar.html' %}
 
