--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -7,6 +7,9 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
+            {% if '/home/' not in request.path %}
+                <a class="nav-list" style="cursor:pointer" href = "/home"><span class="glyphicon glyphicon-globe"></span> Map</a>
+            {% endif %}
             {% if '/home/' in request.path %}
                 <a class="nav-list" style="cursor:pointer" onclick="goto_lowVisionPage()"><span class="glyphicon glyphicon-eye-close"></span> Low Vision View</a>
             {% endif %}
