--- a/landing_map/templates/landing_map/myFav.html
+++ b/landing_map/templates/landing_map/myFav.html
@@ -78,16 +78,10 @@
                 </script>
 
                 <h4>{{card.address}}</h4>
-                
-                <div class="row">
-                    <div class='col-md-6' style="float: left; text-align: left; margin-top: 8px;">
-                        <p class="not_accessible" style="margin-bottom: 2px;"> {{card.alert}}</p>
-                    </div>
-                </div>
                 <div class="row">
                     <div class='col-md-5' style="float: left; text-align: left; margin-top: 8px;">
-                        <p class="accessible" style="margin-bottom: 2px;"> {{card.count_signals}} accessible signals</p>
-                        <p class="accessible"> {{card.count_ramps}} accessible ramp</p>
+                        <p class="not_accessible" style="margin-bottom: 2px;"> {{card.count_signals}} reported signal(s)</p>
+                        <p class="not_accessible"> {{card.count_ramps}} reported ramp(s)</p>
                     </div>
 
                     <div class='col-md-3'>
