--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -18,7 +18,16 @@
     .errorlist {
         list-style: none;
     }
-    </style>
+
+    .navbar{
+        position: fixed;
+        top: 0px;
+        width: 100%;
+        z-index: 10000;
+        border-radius: 0;
+    }
+  </style>
+
 </head>
 
 <body class="container-fluid">
@@ -34,7 +43,7 @@
     </ul>
   </div>
 </nav>
-    <div class="row">
+    <div class="row" style="max-width:100%">
         <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
         <div class="col-md-8 col-lg-6">
             <div class="signup d-flex align-items-center px-md-3 px-2">
