--- a/landing_map/templates/404.html
+++ b/landing_map/templates/404.html
@@ -40,14 +40,20 @@
         button:hover{
             color: #d4ad7d;
         }
+        .navbar{
+            position: fixed;
+            top: 0px;
+            width: 100%;
+            z-index: 10000;
+        }
     </style>
 </head>
 
 <body class="container-fluid">
 {% include 'common/navbar.html' %}
     <div class="ctain">
-        <img src="/static/img/crosswalk.png" style="margin-top: -20px;" width="100%">
-        <div class="centered"><h1 style=font-size:250%>Sorry, that page doesn't exist...</h1>
+        <img src="/static/img/crosswalk.png" style="margin-top: 5%;" width="100%">
+        <div class="centered" style="margin-top: 5%;"><h1 style=font-size:250%>Sorry, that page doesn't exist...</h1>
             <button onclick="location.href = '/';" class="btn btn-lg" type="submit">Click here to return home</button>
         </div>
     </div>
