--- a/landing_map/templates/landing_map/myFav.html
+++ b/landing_map/templates/landing_map/myFav.html
@@ -41,6 +41,12 @@
             margin-bottom: 20px;
             width: 80% !important;
         }
+        .navbar{
+            position: fixed;
+            top: 0px;
+            width: 100%;
+            z-index: 10000;
+        }
 
     </style>
 </head>
@@ -50,7 +56,7 @@
 <!-- navigation bar -->
 {% include 'common/navbar.html' %}
 
-<div class="reports container-fluid">
+<div class="reports container-fluid" style="margin-top: 7%">
     <h3>&nbsp;&nbsp;My Favorites</h3>
 
     <!-- search bar -->
@@ -80,7 +86,7 @@
                 <h4>{{card.address}}</h4>
                 
                 <div class="row">
-                    <div class='col-md-6' style="float: left; text-align: left; margin-top: 8px;">
+                    <div class='col-md-12' style="float: left; text-align: left; margin-top: 8px;">
                         <p class="not_accessible" style="margin-bottom: 2px;"> {{card.alert}}</p>
                     </div>
                 </div>
