--- a/landing_map/templates/common/navbar.html
+++ b/landing_map/templates/common/navbar.html
@@ -2,8 +2,15 @@
     .nofade{
         opacity: 1 !important;
     }
+    .right-margin{
+        margin-right: 10px;
+    }
+    .navbar{
+        border-radius: 0;
+    }
+    </style>
 </style>
-<nav class="navbar navbar-inverse navbar noborder">
+<nav class="navbar navbar-inverse noborder">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
@@ -21,13 +28,13 @@
             <li><a class = "nav-list nofade" href="#"> Hi {{user.first_name}}!</a></li>
             <li><a class = "nav-list" href="/myFav"><span class="glyphicon glyphicon-heart"></span> My Favorites</a></li>
             <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
-            <li><a class = "nav-list" href="/accounts/logout"><span class="glyphicon glyphicon-arrow-left"></span> Log Out</a></li>
+            <li><a class = "nav-list right-margin" href="/accounts/logout"><span class="glyphicon glyphicon-arrow-left"></span> Log Out</a></li>
         </ul>
         {% else %}
         <ul class="nav navbar-nav navbar-right">
             <li><a class = "nav-list" href="/accounts/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
             <li><a class = "nav-list" href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a class = "nav-list" href="/accounts/login"><span class="glyphicon glyphicon-arrow-right"></span> Login</a></li>
+            <li><a class = "nav-list right-margin" href="/accounts/login"><span class="glyphicon glyphicon-arrow-right"></span> Login</a></li>
         </ul>
         {% endif %}
     </div>
