--- a/static/accounts/style.css
+++ b/static/accounts/style.css
@@ -33,8 +33,8 @@ h6{
 }
 
 .signup{
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 18%;
+    margin-bottom: 5%;
 }
 
 .container-fluid{
