--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -13,22 +13,32 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'accounts/style.css' %}">
+  <style>
+    .navbar{
+        position: fixed;
+        top: 0px;
+        width: 100%;
+        z-index: 10000;
+        border-radius: 0;
+    }
+  </style>
 </head>
 
 <body class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
-  <div class="navbar-header">
-    <a class="nav-brand" href="/">NYC Accessible Streets</a>
-  </div>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li><a class = "nav-list" href="/accounts/help"><i class="fas fa-question"></i> Help</a></li>
-      <li><a class = "nav-list" href="/accounts/signup"><i class="fas fa-user"></i> Sign Up</a></li>
-      <li><a class = "nav-list" href="/accounts/login"><i class="fas fa-arrow-right"></i> Login</a></li>
-    </ul>
-  </div>
-</nav>
-  <div class="row">
+  <nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
+    <div class="navbar-header">
+      <a class="nav-brand" href="/">NYC Accessible Streets</a>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li><a class = "nav-list" href="/accounts/help"><i class="fas fa-question"></i> Help</a></li>
+        <li><a class = "nav-list" href="/accounts/signup"><i class="fas fa-user"></i> Sign Up</a></li>
+        <li><a class = "nav-list" href="/accounts/login"><i class="fas fa-arrow-right"></i> Login</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="row" style="max-width:100%">
     <div class="d-sm-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
     <div class="col-md-8 col-lg-6">
       <div class="login d-flex align-self-center px-md-3 px-2">
