--- a/accounts/templates/password_reset.html
+++ b/accounts/templates/password_reset.html
@@ -3,18 +3,41 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sign up</title>
+  <title>Reset Password</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'accounts/style.css' %}">
+  <style>
+    .navbar{
+        position: fixed;
+        top: 0px;
+        width: 100%;
+        z-index: 10000;
+        border-radius: 0;
+    }
+  </style>
 </head>
 
 <body class="container-fluid">
-    <div class="row">
+    <nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
+        <div class="navbar-header">
+          <a class="nav-brand" href="/">NYC Accessible Streets</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li><a class = "nav-list" href="/accounts/help"><i class="fas fa-question"></i> Help</a></li>
+            <li><a class = "nav-list" href="/accounts/signup"><i class="fas fa-user"></i> Sign Up</a></li>
+            <li><a class = "nav-list" href="/accounts/login"><i class="fas fa-arrow-right"></i> Login</a></li>
+          </ul>
+        </div>
+    </nav>
+
+    
+    <div class="row" style="max-width:100%">
         <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
         <div class="col-md-8 col-lg-6">
-            <div class="signup d-flex align-items-center px-md-3 px-2">
+            <div class="login d-flex align-items-center px-md-3 px-2">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-9 col-lg-10 mx-auto">
@@ -24,7 +47,7 @@
                             <!-- Reset Form -->
                             <form method="POST">
                               {% csrf_token %}
-                              {{ form.as_p}}
+                              {{ form|crispy}}
                               <button class="btn" type="submit">Send Instructions</button>
                             </form>
                         </div>
