--- a/accounts/templates/deleteacc.html
+++ b/accounts/templates/deleteacc.html
@@ -26,6 +26,21 @@
         color: red;
     }
 </style>
+<script>
+    function checkform()
+    {
+        var f = document.forms["daform"].elements;
+        var cansubmit = true;
+
+        for (var i = 0; i < f.length; i++) {
+            if (f[i].value.length == 0) cansubmit = false;
+        }
+
+        if (cansubmit) {
+            document.getElementById('submitbutton').disabled = false;
+        }
+    }
+</script>
 
 <body class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-custom navrounding">
@@ -62,13 +77,17 @@
         <form method="POST" action="">
             {% csrf_token %}
             <div class="row">
+                <div class="col-sm-2">
+                    <div class="form-group">
+                    </div>
+                </div>
                 <div class="col-sm-4">
                     <div class="form-group">
                         {{daform.password_confirmation|as_crispy_field}}
                     </div>
                 </div>
                 <div class="col-sm-2" style="margin-bottom:30px">
-                    <button onclick="location.href = '/accounts/deleted';" style="background-color:#18435A; color:white;" class="btn btn-default btn-md" type="submit">Delete My Account</button>
+                    <button id="submitbutton" onclick="location.href = '/accounts/deleted';" style="background-color:red; color:white;" class="btn btn-default btn-md" type="submit">Delete My Account</button>
                 </div>
             </div>
         </form>
